external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.move:4:14
  │
4 │         false::M { f } = 0;
  │              ^^
  │              │
  │              Unexpected '::'
  │              Expected ';'

